--- a/src/app/task1/result/result.component.html
+++ b/src/app/task1/result/result.component.html
@@ -2,28 +2,22 @@
   <div class="card">
     <div class="card-header">Результаты</div>
     <ul class="list-group list-group-flush">
-        <li class="list-group-item">Математическое ожидание: {{result.expectancy}}</li>
-        <li class="list-group-item">Среднеквадратическое отклонение: {{result.sqrDivergence}}</li>
-        <li class="list-group-item">Дисперсия: {{result.dispersion}}</li>
-        <li class="list-group-item">Период: {{result.period}}</li>
-      </ul>
+      <li class="list-group-item">Математическое ожидание: {{result.expectancy}}</li>
+      <li class="list-group-item">Среднеквадратическое отклонение: {{result.sqrDivergence}}</li>
+      <li class="list-group-item">Дисперсия: {{result.dispersion}}</li>
+      <li class="list-group-item">Период: {{result.period}}</li>
+    </ul>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">Проверка на равномерность: {{result.indirectTest}}</li>
+      <li class="list-group-item">Идиальное значение: {{inderectTestResult}}</li>
+    </ul>
   </div>
-  <div class="pt-3">
-    <ngx-charts-bar-vertical
-    [view]="view"
-    [scheme]="colorScheme"
-    [results]="single"
-    [gradient]="gradient"
-    [xAxis]="showXAxis"
-    [yAxis]="showYAxis"
-    [legend]="showLegend"
-    [showXAxisLabel]="showXAxisLabel"
-    [showYAxisLabel]="showYAxisLabel"
-    [xAxisLabel]="xAxisLabel"
-    [yAxisLabel]="yAxisLabel"
-    [yScaleMin]="yScaleMin"
-    [yScaleMax]="yScaleMax"
-    (select)="onSelect($event)">
-  </ngx-charts-bar-vertical>
+  <div class="d-flex justify-content-center pt-3">
+    <ngx-charts-bar-vertical [view]="view" [scheme]="colorScheme" [results]="single" [gradient]="gradient" [xAxis]="showXAxis"
+      [yAxis]="showYAxis" [legend]="showLegend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel"
+      [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel" [yScaleMin]="yScaleMin" [yScaleMax]="yScaleMax" (select)="onSelect($event)">
+    </ngx-charts-bar-vertical>
+
   </div>
+
 </div>
