--- a/src/app/task1/result/result.component.html
+++ b/src/app/task1/result/result.component.html
@@ -6,10 +6,11 @@
       <li class="list-group-item">Среднеквадратическое отклонение: {{result.sqrDivergence}}</li>
       <li class="list-group-item">Дисперсия: {{result.dispersion}}</li>
       <li class="list-group-item">Период: {{result.period}}</li>
+      <li class="list-group-item">Апериодичность: {{result.aperiod}}</li>
     </ul>
     <ul class="list-group list-group-flush">
       <li class="list-group-item">Проверка на равномерность: {{result.indirectTest}}</li>
-      <li class="list-group-item">Идиальное значение: {{inderectTestResult}}</li>
+      <li class="list-group-item">Идеальное значение: {{inderectTestResult}}</li>
     </ul>
   </div>
   <div class="d-flex justify-content-center pt-3">
@@ -19,7 +20,4 @@
     </ngx-charts-bar-vertical>
 
   </div>
-
 </div>
-
-<!--http://localhost:4200/result?n=1000000&m=999983&x0=995117&a=997573-->
