--- a/src/app/task2/result/exponential-distribution/exponential-distribution.component.html
+++ b/src/app/task2/result/exponential-distribution/exponential-distribution.component.html
@@ -1,11 +1,9 @@
-<div class="container p-3">
+<div class="container">
   <div class="card">
       <div class="card-header">Результат. Экспоненциальное распределение</div>
-      <ul class="list-group list-group-flush">
-          <li class="list-group-item">Математическое ожидание: {{result.expectancy}}</li>
-          <li class="list-group-item">Среднеквадратическое отклонение: {{result.sqrDivergence}}</li>
-          <li class="list-group-item">Дисперсия: {{result.dispersion}}</li>
-      </ul>
   </div>
+
+  <app-histogram-table [result]="result" >
+    </app-histogram-table>
 
 </div>
